--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open",
     "prod": "cross-env NODE_ENV=production webpack",
     "server:dev": "nodemon --exec babel-node server/index.js",
-    "server:prod": "cross-env NODE_ENV=production webpack --config ./webpack.node.config.js",
+    "build:server": "cross-env NODE_ENV=production webpack --config ./webpack.node.config.js",
     "crawler": "babel-node server/crawler.js",
-    "start": "npm run server:prod && node build/index.js"
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
