--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "npm run build:server && node build/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Cagdas ISIK",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.5",
@@ -37,6 +37,7 @@
   "dependencies": {
     "apollo-server": "^2.9.13",
     "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql-iso-date": "^3.6.1",
     "mongoose": "^5.7.14",
