--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server:dev": "nodemon --exec babel-node server/index.js",
     "build:server": "webpack --config ./webpack.node.config.js",
     "crawler": "babel-node server/crawler.js",
-    "start": "npm run build:server && node build/index.js"
+    "start:server": "node build/index.js",
+    "start": "npm-run-all -s build:server start:server"
   },
   "keywords": [],
   "author": "Cagdas ISIK",
@@ -41,6 +42,7 @@
     "graphql": "^14.5.8",
     "graphql-iso-date": "^3.6.1",
     "mongoose": "^5.7.14",
+    "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "request": "^2.88.0"
