--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "server.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open",
-    "prod": "cross-env NODE_ENV=production webpack",
+    "prod": "cross-env NODE_ENV=production webpack -p",
     "server:dev": "nodemon --exec babel-node server/index.js",
-    "build:server": "webpack -p --config ./webpack.node.config.js",
+    "server:build": "webpack -p --config ./webpack.node.config.js",
+    "heroku-postbuild": "npm run server:build",
     "crawler": "node build/crawler.js",
-    "heroku-postbuild": "npm run build:server",
     "start": "node build/app.js"
   },
   "keywords": [],
@@ -43,7 +43,6 @@
     "graphql": "^14.5.8",
     "graphql-iso-date": "^3.6.1",
     "mongoose": "^5.7.14",
-    "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "request": "^2.88.0"
