--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open",
-    "prod": "cross-env NODE_ENV=production webpack -p",
-    "server:dev": "nodemon --exec babel-node server/index.js",
-    "server:build": "webpack -p --config ./webpack.node.config.js",
-    "heroku-postbuild": "npm run server:build && npm run prod",
+    "server:dev": "cross-env NODE_ENV=development nodemon --exec babel-node server/index.js",
+    "heroku-postbuild": "cross-env NODE_ENV=production \"webpack -p --config ./webpack.node.config.js && webpack -p\"",
     "crawler": "node build/crawler.js",
     "start": "node build/server.js"
   },
@@ -33,7 +30,9 @@
     "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
+    "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.9.0",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
   },
