--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql-iso-date": "^3.6.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.14",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
