--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
   "dependencies": {
     "apollo-server": "^2.9.13",
     "bcrypt": "^3.0.6",
-    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql-iso-date": "^3.6.1",
+    "jsdom": "^15.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.14",
     "normalize.css": "^8.0.1",
