--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node server/index.js",
+    "client": "npm run start --prefix client",
+    "server": "cross-env NODE_ENV=development nodemon --exec babel-node server/index.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \" npm run client\"",
     "crawler:dev": "cross-env NODE_ENV=development babel-node server/crawler/index.js",
-    "heroku-postbuild": "cross-env NODE_ENV=production webpack -p --config ./webpack.node.config.js && cross-env NODE_ENV=production webpack -p",
+    "heroku-postbuild": "concurrently \"cross-env NODE_ENV=production webpack -p\" \"npm run build --prefix client\"",
     "crawler": "node build/crawler.js",
     "start": "node build/server.js"
   },
@@ -17,26 +19,13 @@
     "@babel/core": "^7.7.5",
     "@babel/node": "^7.7.4",
     "@babel/preset-env": "^7.7.5",
-    "@babel/preset-react": "^7.7.4",
-    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.0.2",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.17.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.13.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
@@ -49,11 +38,6 @@
     "jsdom": "^15.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.14",
-    "normalize.css": "^8.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-inlinesvg": "^1.2.0",
-    "react-router-dom": "^5.1.2",
     "request": "^2.88.0"
   }
 }
