--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,9 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^14.5.8",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
