--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack -p"
+    "build": "cross-env NODE_ENV=production ./node_modules/webpack/bin/webpack.js -p"
   },
   "keywords": [],
   "author": "Cagdas ISIK",
