Folder structure changed.

--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "price-comparison-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "build/server.js",
   "scripts": {
-    "client": "npm run start --prefix client",
-    "server": "cross-env NODE_ENV=development nodemon --watch server --exec babel-node server/index.js",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \" npm run client\"",
+    "client:dev": "cross-env NODE_ENV=development webpack-dev-server",
+    "client": "cross-env NODE_ENV=production webpack -p",
+    "server:dev": "cross-env NODE_ENV=development nodemon --watch server --exec babel-node server/index.js",
+    "server": "cross-env NODE_ENV=production webpack --config ./webpack.node.config.js -p",
+    "dev": "concurrently --kill-others-on-fail \"npm run server:dev\" \" npm run client:dev\"",
     "crawler:dev": "cross-env NODE_ENV=development babel-node server/crawler/index.js",
-    "heroku-postbuild": "concurrently \"cross-env NODE_ENV=production webpack -p\" \"cd client && npm install && npm run build\"",
+    "heroku-postbuild": "concurrently \"npm run server\" \"npm run client\"",
     "crawler": "node build/crawler.js",
     "start": "node build/server.js"
   },
@@ -19,16 +21,30 @@
     "@babel/core": "^7.7.5",
     "@babel/node": "^7.7.4",
     "@babel/preset-env": "^7.7.5",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.0.2",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^6.0.3",
+    "css-loader": "^3.4.1",
     "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.17.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.1.2",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-boost": "^0.4.7",
     "apollo-server": "^2.9.13",
     "bcrypt": "^3.0.6",
     "dotenv": "^8.2.0",
@@ -38,6 +54,11 @@
     "jsdom": "^15.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.14",
+    "normalize.css": "^8.0.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-inlinesvg": "^1.2.0",
+    "react-router-dom": "^5.1.2",
     "request": "^2.88.0"
   }
 }
